# mojankinator

./: Cargo.toml  README.md
src/: build-nomap.gradle.kts.tmpl  build-remap.gradle.kts.tmpl  build.gradle.kts  colorize.rs  decompiler.rs  main.rs  repository.rs  settings.gradle.kts
