[package]
name = "mojankinator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

[dependencies]
indicatif = "0.18.3"
git2 = "0.20.3"
walkdir = "2.5.0"
linked-hash-map = "0.5.6"
toml = "0.9.10"
error-stack = "0.6.0"
thiserror = "2.0.17"
tempfile = "3.24.0"
zip = "7.0.0"

[dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[dependencies.ureq]
version = "3.1.4"
features = ["json"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.owo-colors]
version = "4.2.3"
features = ["supports-colors"]
