[package]
name = "mojankinator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

[dependencies]
indicatif = "0.18.4"
git2 = "0.20.4"
walkdir = "2.5.0"
linked-hash-map = "0.5.6"
toml = "1.1.2"
error-stack = "0.7.0"
thiserror = "2.0.18"
tempfile = "3.27.0"
zip = "8.5.0"

[dependencies.chrono]
version = "0.4.44"
features = ["serde"]

[dependencies.ureq]
version = "3.3.0"
features = ["json"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.owo-colors]
version = "4.3.0"
features = ["supports-colors"]
